--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="get_time">Get time</string>
     <string name="observer">Observer</string>
     <string name="action_settings">Settings</string>
+
+    <string name="add_record">Добавить запись</string>
+    <string name="delete_record">Удалить запись</string>
 </resources>
